=== v0.2.4 - master
CodeArea:
    * Fixed removing selected area after Enter/Backspace/Semicolon.

=== v0.2.3
Autocomplete:
    + Class name to package info.
    + Clear `editWord` if input dot.
    + Hide snippet if focus is lost.
    + Make auto import.
    * Improved accuracy and speed auto adding paired characters.
    * Fixed scroll bar.
    * Fixed X position.
    - Flag of keywords.
CodeArea:
    + Auto adding space after pressed Enter.
    + Auto removing space after pressed Backspace.

=== v0.2.2
Autocomplete:
    + Classes / methods / variables to snippet.
    + Flags to item.
    + Package source to item.
    * Changed color of selected item.
    * Fixed height of snippet.
    * Fixed hide snippet if `options` is empty.
    * Fixed clean `editWord` after brackets.
    * Fixed scrolling on `codeArea`.
    * Fixed Y position.
    - `ScrollPane`.
CodeArea:
    + Ability to zoom.
Highlight:
    * Ignored `IndexOutOfBoundsException`.

=== v0.2.1
Autocomplete:
    + Automatic completion of characters `' " < ( { [`
    + Click on an element - select it.
    + Hover on items.
    * Reduced calculations for the height of the snippet.
    * Set cursor to hand.
Highlight:
    + Highlight `[ ]`

=== v0.2.0
* Update to latest version of libraries.
Autocomplete:
    + Basic keywords in Java.
Highlight:
    + Paired shapes and brackets.
    * Fixed highlight without JDK.
    * Improved TreeStructure.
JDK:
    + Description of JDK button (Tooltip).
    * Fixed open JDK path.
Windows:
    * Fixed JDK setting.

=== v0.1.0
+ Syntax.
+ Ability to setting JDK path.
* Changed window of New Project.

=== v0.0.9
+ Highlight.
* Fixed `TreeView`.

=== v0.0.8
+ Ability to Input data from Output area.
+ Focus to `TextArea`.

=== v0.0.7
TreeView:
    + `ContextMenu`.
    * Fixed view of files.
+ Ability to run other classes from `src` directory.
+ `out` directory with `source.txt` whose save path to all java file in `src`.